--- a/frontend/student-corner.html
+++ b/frontend/student-corner.html
@@ -262,14 +262,16 @@
                 <i class="fas fa-calendar-check"></i>
                 <h3>Exam Timetable</h3>
                 <p>Stay updated with the latest semester examination schedules and internal assessment dates.</p>
-                <a href="#notice-board" class="btn btn-outline" style="margin-top: 20px;">View Schedule</a>
+                <a href="timetable.html" class="btn btn-outline" style="margin-top: 20px;">View Schedule</a>
             </div>
 
-            <div class="resource-card" data-aos="fade-up" data-aos-delay="200">
+            <div class="resource-card" data-aos="fade-up" data-aos-delay="200"
+                style="border: 1px solid var(--secondary); background: rgba(0, 35, 71, 0.02);">
                 <i class="fas fa-user-graduate"></i>
                 <h3>Scholarships</h3>
                 <p>Information on government and institutional scholarships available for deserving students.</p>
-                <a href="admissions.html" class="btn btn-outline" style="margin-top: 20px;">Apply Now</a>
+                <a href="https://ssp.postmatric.karnataka.gov.in/post_sa/signin.aspx" target="_blank"
+                    class="btn btn-primary" style="margin-top: 20px;">Apply Now</a>
             </div>
         </div>
 
