--- a/frontend/admin/dashboard.html
+++ b/frontend/admin/dashboard.html
@@ -7,61 +7,8 @@
     <title>Dashboard | Admin Panel</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/admin.css">
     <style>
-        :root {
-            --sidebar-width: 260px;
-        }
-
-        body {
-            background: #f4f7f6;
-            display: flex;
-            margin: 0;
-        }
-
-        .sidebar {
-            width: var(--sidebar-width);
-            background: var(--primary);
-            color: white;
-            height: 100vh;
-            position: fixed;
-            padding-top: 30px;
-        }
-
-        .main-content {
-            margin-left: var(--sidebar-width);
-            flex: 1;
-            padding: 40px;
-            min-height: 100vh;
-        }
-
-        .sidebar-brand {
-            padding: 0 30px 40px;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-            margin-bottom: 30px;
-        }
-
-        .sidebar-menu a {
-            display: flex;
-            align-items: center;
-            padding: 15px 30px;
-            color: rgba(255, 255, 255, 0.7);
-            font-weight: 500;
-            text-decoration: none;
-            transition: var(--transition);
-        }
-
-        .sidebar-menu a i {
-            margin-right: 15px;
-            width: 20px;
-        }
-
-        .sidebar-menu a:hover,
-        .sidebar-menu a.active {
-            background: rgba(255, 255, 255, 0.05);
-            color: var(--secondary);
-            border-left: 4px solid var(--secondary);
-        }
-
         .stat-card {
             background: white;
             padding: 30px;
@@ -98,13 +45,6 @@
             color: var(--primary);
         }
 
-        .header-bar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 40px;
-        }
-
         .card-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -114,21 +54,7 @@
 </head>
 
 <body>
-    <div class="sidebar">
-        <div class="sidebar-brand">
-            <h2>SVES Admin</h2>
-        </div>
-        <div class="sidebar-menu">
-            <a href="dashboard.html" class="active"><i class="fas fa-home"></i> Dashboard</a>
-            <a href="manage-notes.html"><i class="fas fa-file-alt"></i> Manage Notes</a>
-            <a href="manage-gallery.html"><i class="fas fa-images"></i> Manage Gallery</a>
-            <a href="manage-announcements.html"><i class="fas fa-bullhorn"></i> Announcements</a>
-            <a href="manage-faculty.html"><i class="fas fa-user-tie"></i> Faculty</a>
-            <a href="manage-admissions.html"><i class="fas fa-user-graduate"></i> Admissions</a>
-            <a href="#" id="logout-btn" style="margin-top: 50px; color: #ff6b6b;"><i class="fas fa-sign-out-alt"></i>
-                Logout</a>
-        </div>
-    </div>
+    <div id="admin-sidebar"></div>
 
     <div class="main-content">
         <div class="header-bar">
@@ -174,6 +100,27 @@
                 </div>
                 <i class="fas fa-user-graduate" style="font-size: 2.5rem; color: #eee;"></i>
             </a>
+            <a href="manage-timetable.html" class="stat-card">
+                <div>
+                    <h3>Timetable Entries</h3>
+                    <p class="stat-val" id="stat-timetable">-</p>
+                </div>
+                <i class="fas fa-calendar-alt" style="font-size: 2.5rem; color: #eee;"></i>
+            </a>
+            <a href="manage-achievements.html" class="stat-card">
+                <div>
+                    <h3>Achievements</h3>
+                    <p class="stat-val" id="stat-achievements">-</p>
+                </div>
+                <i class="fas fa-trophy" style="font-size: 2.5rem; color: #eee;"></i>
+            </a>
+            <a href="manage-portfolios.html" class="stat-card">
+                <div>
+                    <h3>Portfolios</h3>
+                    <p class="stat-val" id="stat-portfolios">-</p>
+                </div>
+                <i class="fas fa-briefcase" style="font-size: 2.5rem; color: #eee;"></i>
+            </a>
         </div>
 
         <div
@@ -185,6 +132,8 @@
                     Image</a>
                 <a href="manage-announcements.html" class="btn btn-outline"><i class="fas fa-plus"></i> New
                     Announcement</a>
+                <a href="manage-timetable.html" class="btn btn-primary" style="background: var(--secondary);"><i
+                        class="fas fa-plus"></i> Set Exam Timetable</a>
             </div>
         </div>
     </div>
@@ -192,21 +141,7 @@
     <script src="../assets/js/api.js"></script>
     <script>
         // Check authentication
-        if (!isLoggedIn()) {
-            window.location.href = 'login.html';
-        }
-
-        // CSP-compliant logout handler
-        document.addEventListener('DOMContentLoaded', function () {
-            var logoutBtn = document.getElementById('logout-btn');
-            if (logoutBtn) {
-                logoutBtn.addEventListener('click', function (e) {
-                    e.preventDefault();
-                    localStorage.clear();
-                    window.location.href = '../index.html';
-                });
-            }
-        });
+        if (!isLoggedIn()) window.location.href = 'login.html';
 
         // Load dashboard stats
         async function loadStats() {
@@ -217,6 +152,9 @@
                 document.getElementById('stat-announcements').textContent = stats.announcements;
                 document.getElementById('stat-faculty').textContent = stats.faculty;
                 document.getElementById('stat-admissions').textContent = stats.admissions;
+                document.getElementById('stat-timetable').textContent = stats.timetable || '0';
+                document.getElementById('stat-achievements').textContent = stats.achievements || '0';
+                document.getElementById('stat-portfolios').textContent = stats.portfolios || '0';
             } catch (error) {
                 console.error('Failed to load stats:', error);
             }
@@ -224,6 +162,7 @@
 
         document.addEventListener('DOMContentLoaded', loadStats);
     </script>
+    <script src="../assets/js/main.js"></script>
 </body>
 
 </html>
