--- a/frontend/compare-courses.html
+++ b/frontend/compare-courses.html
@@ -16,7 +16,29 @@
             margin-top: -60px;
             position: relative;
             z-index: 10;
-            padding-bottom: 40px;
+            padding-bottom: 60px;
+        }
+
+        .inner-page-header {
+            background: linear-gradient(rgba(0, 35, 71, 0.9), rgba(0, 35, 71, 0.9)), url('assets/images/campus-hero.png');
+            background-size: cover;
+            background-position: center;
+            padding: 180px 0 100px;
+            color: var(--white);
+            text-align: center;
+        }
+
+        .inner-page-header h1 {
+            font-size: 3rem;
+            margin-bottom: 20px;
+            color: var(--white);
+        }
+
+        .inner-page-header p {
+            font-size: 1.2rem;
+            opacity: 0.9;
+            max-width: 800px;
+            margin: 0 auto;
         }
 
         .comparison-card {
