--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -283,32 +283,39 @@
             </div>
 
             <div data-aos="fade-left">
-                <form class="contact-form">
+                <form class="contact-form" id="contact-form">
+                    <div id="form-alert"
+                        style="display: none; padding: 15px; border-radius: 8px; margin-bottom: 20px; font-weight: 500;">
+                    </div>
                     <div class="form-group">
                         <label>Your Name</label>
-                        <input type="text" placeholder="Enter your full name" required>
+                        <input type="text" name="from_name" id="from_name" placeholder="Enter your full name" required>
                     </div>
                     <div class="form-group">
                         <label>Email Address</label>
-                        <input type="email" placeholder="name@example.com" required>
+                        <input type="email" name="from_email" id="from_email" placeholder="name@example.com" required>
                     </div>
                     <div class="form-group">
                         <label>Subject</label>
-                        <input type="text" placeholder="How can we help?" required>
+                        <input type="text" name="subject" id="subject" placeholder="How can we help?" required>
                     </div>
                     <div class="form-group">
                         <label>Message</label>
-                        <textarea rows="5" placeholder="Write your message here..." required></textarea>
+                        <textarea rows="5" name="message" id="message" placeholder="Write your message here..."
+                            required></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary" style="width: 100%;">Send Message</button>
+                    <button type="submit" class="btn btn-primary" id="send-btn" style="width: 100%;">
+                        <i class="fas fa-paper-plane" style="margin-right: 8px;"></i> Send Message
+                    </button>
                 </form>
             </div>
         </div>
 
         <div class="map-container" data-aos="fade-up">
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15264.453308865582!2d74.8354!3d16.5134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc0e19c00000001%3A0x1234567890abcdef!2sSVES%20College%20Harugeri!5e0!3m2!1sen!2sin!4v1700000000000!5m2!1sen!2sin"
-                width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2637.41863643602!2d74.94489344537898!3d16.509507475875303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc0cd590c76cadd%3A0xa0b4d57e53ecd706!2sSVES%20B.R.Darur%20First%20Grade%20College%2C%20Harugeri.%20Tq%3A%20Raibag%20Dist%3A%20Belagavi!5e1!3m2!1sen!2sin!4v1772294763766!5m2!1sen!2sin"
+                width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
 
@@ -357,7 +364,7 @@
                     </p>
                     <p><i class="fas fa-envelope"
                             style="color: var(--secondary); margin-right: 10px; margin-top: 15px;"></i>
-                        info@svescollege.in</p>
+                        athanimallikarjun7@gmail.com</p>
                 </div>
             </div>
 
@@ -368,9 +375,81 @@
         </div>
     </footer>
 
+    <!-- EmailJS SDK -->
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>AOS.init({ duration: 800, once: true });</script>
     <script src="assets/js/main.js"></script>
+    <script>
+        // ============================================
+        // EMAILJS CONTACT FORM SETUP
+        // ============================================
+        // HOW TO SET UP (one-time, 5 minutes):
+        // 1. Go to https://www.emailjs.com/ and create a FREE account
+        // 2. Add an "Email Service" (Gmail) → you'll get a SERVICE_ID
+        // 3. Create an "Email Template" with these variables:
+        //    - {{from_name}}  → sender's name
+        //    - {{from_email}} → sender's email
+        //    - {{subject}}    → subject line
+        //    - {{message}}    → message body
+        //    Set "To Email" to: athanimallikarjun7@gmail.com
+        // 4. Go to Account → copy your PUBLIC KEY
+        // 5. Replace the 3 values below:
+        // ============================================
+
+        const EMAILJS_PUBLIC_KEY = 'c97wPT5xvpj8OPc6U';     // ← Replace this
+        const EMAILJS_SERVICE_ID = 'service_yspushs';     // ← Replace this
+        const EMAILJS_TEMPLATE_ID = 'template_nh5mq5s';   // ← Replace this
+
+        // Initialize EmailJS
+        emailjs.init(EMAILJS_PUBLIC_KEY);
+
+        // Handle form submission
+        document.getElementById('contact-form').addEventListener('submit', function (e) {
+            e.preventDefault();
+
+            const btn = document.getElementById('send-btn');
+            const alertBox = document.getElementById('form-alert');
+            const originalText = btn.innerHTML;
+
+            // Loading state
+            btn.innerHTML = '<i class="fas fa-spinner fa-spin"></i> Sending...';
+            btn.disabled = true;
+
+            // Gather form data — keys must match your EmailJS template variables
+            const templateParams = {
+                name: document.getElementById('from_name').value,
+                email: document.getElementById('from_email').value,
+                subject: document.getElementById('subject').value,
+                message: document.getElementById('message').value
+            };
+
+            emailjs.send(EMAILJS_SERVICE_ID, EMAILJS_TEMPLATE_ID, templateParams)
+                .then(function () {
+                    // Success
+                    alertBox.style.display = 'block';
+                    alertBox.style.background = '#d4edda';
+                    alertBox.style.color = '#155724';
+                    alertBox.style.border = '1px solid #c3e6cb';
+                    alertBox.innerHTML = '<i class="fas fa-check-circle"></i> Your message has been sent successfully! We will get back to you soon.';
+                    document.getElementById('contact-form').reset();
+                }, function (error) {
+                    // Error
+                    alertBox.style.display = 'block';
+                    alertBox.style.background = '#f8d7da';
+                    alertBox.style.color = '#721c24';
+                    alertBox.style.border = '1px solid #f5c6cb';
+                    alertBox.innerHTML = '<i class="fas fa-exclamation-triangle"></i> Failed to send message. Please email us directly at athanimallikarjun7@gmail.com';
+                    console.error('EmailJS error:', error);
+                })
+                .finally(function () {
+                    btn.innerHTML = originalText;
+                    btn.disabled = false;
+                    // Auto-hide alert after 8 seconds
+                    setTimeout(() => { alertBox.style.display = 'none'; }, 8000);
+                });
+        });
+    </script>
 </body>
 
 </html>
